fix:img reset/배너 z-index 피드백 반영

--- a/css/common.css
+++ b/css/common.css
@@ -64,7 +64,6 @@ body{
 }
 img{
   vertical-align: top;
-  display: inline-block;
 }
 .bt_margin{
   margin-bottom: 50px;
