--- a/css/main.css
+++ b/css/main.css
@@ -60,7 +60,7 @@ header div{
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
-  z-index: -2;
+  z-index: 1;
 }
 .banner:before{
   content: '';
